--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
-}
+@import "tailwindcss";
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes fadeLoop {
+
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.fade-loop {
+  animation: fadeLoop 2.5s infinite ease-in-out;
+}
+
+:root {
+  --primary-color: #5D89A8;
+  --secondary-color: #F2E7DC;
+  --accent-color: #7A9E9F;
+  --background-color: #262627;
+  --text-color: #f5f5f5;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  font-family: "Poppins", sans-serif;
+}
+
+/* Removed empty .logo ruleset as it was unnecessary */
+
+.ChatWindow {
+  background-color: #b3b3b3;
+  background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+}
+
+
+.btn {
+  background-color: var(--accent-color);
   color: white;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.btn:hover {
+  background-color: var(--primary-color);
 }
 
-@keyframes App-logo-spin {
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.custom-gradient {
+  background: linear-gradient(45deg, #36247e, #7b3476, #3d1571);
+}
+
+/* WELCOME */
+
+/* global.css or index.css */
+@keyframes fadeIn {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
   }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-out both;
+}
+
+.fade-in-up {
+  animation: fadeInUp 1s ease-out both;
 }
